--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
-/* font-family: 'Roboto', sans-serif;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-image: url("assets/burger-friends.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
-COLORS
+
+
+
+/* COLORS
 teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
-red - #ee5253
-
-*/
-
+red - #ee5253 */
