--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,31 @@ section {
   width: 500px;
 }
 
+fieldset {
+  border: none;
+  margin: 75px 0px 0px 20px;
+}
+
+legend {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .hidden {
   display: none;
+}
+
+.asterisk {
+  color: #ee5253;
+  font-size: 24px;
+}
+
+.submit {
+  background-color: #0fb9b1;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 50px 10px 50px;
+  font-size: 16px;
 }
 
 .random-dish {
