--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 nav {
   background-color: #0fb9b1;
-  padding: 20px;
+  padding: 22px;
 }
 
 h1 {
@@ -25,8 +25,8 @@ main {
 
 section {
   background-color: rgba(225, 225, 225, .9);
-  height: 400px;
-  width: 500px;
+  height: 420px;
+  width: 520px;
 }
 
 fieldset {
@@ -51,6 +51,7 @@ label {
 .asterisk {
   color: #ee5253;
   font-size: 24px;
+  vertical-align: super;
 }
 
 .submit {
