--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .cookpot {
@@ -77,6 +78,13 @@ label {
   font-size: 20px;
   font-style: italic;
   font-weight: bold;
+  margin: 0px;
+}
+
+.dish-result {
+  font-size: 46px;
+  font-weight: bold;
+  margin: 0px;
 }
 
 
