Add styling for entire meal results

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,12 @@ label {
   margin: 0px;
 }
 
+.entire-meal {
+  font-size: 26px;
+  margin: 30px 50px 30px 50px;
+  text-align: center;
+}
+
 
 
 /* COLORS
